--- a/notebooks/01_data_preprocessing.ipynb
+++ b/notebooks/01_data_preprocessing.ipynb
@@ -894,6 +894,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# One-Hot Encoding"
+      ],
+      "metadata": {
+        "id": "Jpx8uMWAsgLQ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "label_col = \"num\"\n",
@@ -1393,6 +1402,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Some EDA"
+      ],
+      "metadata": {
+        "id": "P6szrzU2snzV"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "plt.figure(figsize=(6,4))\n",
@@ -1725,7 +1743,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 788
+          "height": 1000
         },
         "id": "_us5NYOQO8BH",
         "outputId": "db3318a0-859a-4396-d3cd-bd2951db76b6"
@@ -1827,6 +1845,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Binarize the Target (0/1)"
+      ],
+      "metadata": {
+        "id": "U_f8ki9cstV4"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "clean_df[\"target\"] = (clean_df[\"num\"] > 0).astype(int)\n",
@@ -1881,6 +1908,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Save Cleaned Dataset"
+      ],
+      "metadata": {
+        "id": "tdle7NHVszKx"
+      }
     },
     {
       "cell_type": "code",
